@@ -341,27 +341,22 @@
                 <version>2.0-beta-1</version>
             </plugin>
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
+                <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
-                <version>7.6.16.v20140903</version>
+                <version>9.3.6.v20151106</version>
                 <configuration>
-                    <jvmArgs>-XX:PermSize=512M -XX:MaxPermSize=1024M</jvmArgs>
-                    <connectors>
-                        <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
-                            <port>8989</port>
-                        </connector>
-                    </connectors>
-                    <webAppConfig>
+                    <webApp>
                         <contextPath>/${project.name}</contextPath>
-                    </webAppConfig>
-                    <systemProperties>
-                        <systemProperty>
-                            <name>org.mortbay.util.URI.charset</name>
-                            <value>${project.build.sourceEncoding}</value>
-                        </systemProperty>
-                    </systemProperties>
-                    <stopKey/>
-                    <stopPort/>
+                    </webApp>
+                    <httpConnector>
+                        <port>8989</port>
+                        <!--<connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">-->
+                            <!--<port>8989</port>-->
+                        <!--</connector>-->
+                    </httpConnector>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <stopKey>foo</stopKey>
+                    <stopPort>9999</stopPort>
                 </configuration>
             </plugin>
         </plugins>
